# Server/src/controllers/actionHistoryController.js
@@ -2,6 +2,7 @@ const actionHistoryModel = require('../models/actionHistory');
 const Sequelize = require('sequelize');
 const moment = require('moment-timezone');
 const mqtt = require('mqtt');
+const dayjs = require('dayjs');
 const { DateTime } = require('luxon');
 const client = require('../config/mqttConnect/mqttClient');
 const { getGeneralAction } = require('../generalmethods/getGeneralAction');
@@ -18,33 +19,6 @@ class actionHistoryController {
       let orderCriteria = [];
       let attributes = ['id', 'deviceName', 'action', 'createdAt'];
 
-      // switch (orderBy) {
-      //   case 'id_ASC':
-      //     orderCriteria = [['id', 'ASC']];
-      //     break;
-      //   case 'id_DESC':
-      //     orderCriteria = [['id', 'DESC']];
-      //     break;
-      //   case 'deviceName_ASC':
-      //     orderCriteria = [['deviceName', 'ASC']];
-      //     break;
-      //   case 'deviceName_DESC':
-      //     orderCriteria = [['deviceName', 'DESC']];
-      //     break;
-      //   case 'action_ASC':
-      //     orderCriteria = [['action', 'ASC']];
-      //     break;
-      //   case 'action_DESC':
-      //     orderCriteria = [['action', 'DESC']];
-      //     break;
-      //   case 'createdAt_ASC':
-      //     orderCriteria = [['createdAt', 'ASC']];
-      //     break;
-      //   case 'createdAt_DESC':
-      //     orderCriteria = [['createdAt', 'DESC']];
-      //     break;
-      // }
-
       if (filterBy === 'deviceName') {
         attributes = attributes.filter(attr => attr !== 'action');
       } else if (filterBy === 'action') {
@@ -57,43 +31,26 @@ class actionHistoryController {
       const totalCount = await ActionHistory.count(); // Tính tổng số lượng dữ liệu trong toàn bộ database
 
       const offset = (pageNumber - 1) * sizePerPage;
+
+      // Xác định tiêu chí sắp xếp
+      if (orderBy) {
+        const [field, direction] = orderBy.split('_');
+        orderCriteria.push([field, direction]);
+      }
+
+      // Lấy dữ liệu theo phân trang (pagination) và sắp xếp trên cơ sở dữ liệu
       let actionHistory = await ActionHistory.findAll({
         attributes: attributes,
         limit: sizePerPage,
         offset: offset,
+        order: orderCriteria, // Thực hiện sắp xếp trên cơ sở dữ liệu
       });
 
-      // Chuyển kết quả từ Sequelize thành mảng JavaScript
+      // Chuyển kết quả từ Sequelize thành mảng JavaScript và chuyển đổi thời gian của createdAt
       actionHistory = actionHistory.map(action => ({
         ...action.toJSON(),
-        createdAt: convertDbTimeToAppTime(action.createdAt).toISO(), // Chuyển đổi thời gian của createdAt
+        createdAt: convertDbTimeToAppTime(action.createdAt).toISO(),
       }));
-
-      // Sắp xếp mảng dữ liệu
-      actionHistory.sort((a, b) => {
-        // Thực hiện sắp xếp theo tiêu chí được chỉ định trong orderBy
-        // Đảm bảo rằng orderBy đã được xử lý ở trước để đảm bảo tính chính xác
-        if (orderBy === 'id_ASC') {
-          return a.id - b.id;
-        } else if (orderBy === 'id_DESC') {
-          return b.id - a.id;
-        } else if (orderBy === 'deviceName_ASC') {
-          return a.deviceName.localeCompare(b.deviceName);
-        } else if (orderBy === 'deviceName_DESC') {
-          return b.deviceName.localeCompare(a.deviceName);
-        } else if (orderBy === 'action_ASC') {
-          return a.action.localeCompare(b.action);
-        } else if (orderBy === 'action_DESC') {
-          return b.action.localeCompare(a.action);
-        } else if (orderBy === 'createdAt_ASC') {
-          return new Date(a.createdAt) - new Date(b.createdAt);
-        } else if (orderBy === 'createdAt_DESC') {
-          return new Date(b.createdAt) - new Date(a.createdAt);
-        } else {
-          // Nếu không có orderBy nào khớp, giữ nguyên thứ tự
-          return 0;
-        }
-      });
 
       res.send({
         totalCount: totalCount, // Tổng số lượng dữ liệu
@@ -108,13 +65,9 @@ class actionHistoryController {
     try {
       const { field, value, page, pageSize, orderBy } = req.query;
 
-      // Điều kiện tìm kiếm dựa trên field và value
+      // Xây dựng điều kiện tìm kiếm dựa trên field và value
       let whereCondition = {};
       if (field !== 'all' && value) {
-        const validFields = ['id', 'deviceName', 'action', 'createdAt'];
-        if (!validFields.includes(field)) {
-          return res.status(400).send(`Field '${field}' is not valid.`);
-        }
         whereCondition[field] = { [Sequelize.Op.substring]: value };
       } else if (field === 'all' && value) {
         whereCondition = {
@@ -132,15 +85,23 @@ class actionHistoryController {
 
       const ActionHistory = await actionHistoryModel();
 
-      // Lấy dữ liệu theo điều kiện phân trang
+      // Xác định tiêu chí sắp xếp
+      let orderCriteria = [];
+      if (orderBy) {
+        const [field, direction] = orderBy.split('_');
+        orderCriteria.push([field, direction]);
+      }
+
+      // Lấy dữ liệu theo điều kiện tìm kiếm và sắp xếp trên cơ sở dữ liệu
       let actionHistoryData = await ActionHistory.findAll({
         where: whereCondition,
         limit: limit,
         offset: offset,
+        order: orderCriteria, // Áp dụng sắp xếp trên cơ sở dữ liệu
       });
 
       if (actionHistoryData.length === 0) {
-        return res.status(404).send(`No data found for the provided field and value.`);
+        return res.send(`Value '${value}' was not found in the '${field} field'.`);
       }
 
       // Chuyển đổi sang định dạng JSON và chuyển đổi thời gian
@@ -149,41 +110,75 @@ class actionHistoryController {
         createdAt: convertDbTimeToAppTime(data.createdAt).toISO(), // Chuyển đổi thời gian của createdAt
       }));
 
-      // Sắp xếp trong phạm vi trang hiện tại
-      actionHistoryData.sort((a, b) => {
-        const createdAtA = DateTime.fromISO(a.createdAt);
-        const createdAtB = DateTime.fromISO(b.createdAt);
-
-        switch (orderBy) {
-          case 'id_ASC':
-            return a.id - b.id;
-          case 'id_DESC':
-            return b.id - a.id;
-          case 'deviceName_ASC':
-            return a.deviceName.localeCompare(b.deviceName);
-          case 'deviceName_DESC':
-            return b.deviceName.localeCompare(a.deviceName);
-          case 'action_ASC':
-            return a.action - b.action;
-          case 'action_DESC':
-            return b.action - a.action;
-          case 'createdAt_ASC':
-            return createdAtA - createdAtB;
-          case 'createdAt_DESC':
-            return createdAtB - createdAtA;
-          default:
-            return 0;
-        }
-      });
-
-      // Đếm tổng số lượng dữ liệu phù hợp với điều kiện tìm kiếm
       const totalCount = await ActionHistory.count({
         where: whereCondition,
       });
 
       res.send({
-        totalCount, // Tổng số lượng dữ liệu phù hợp với điều kiện tìm kiếm
+        totalCount, // Tổng số lượng dữ liệu phù hợp với điều kiện tìm kiếm (chưa cần lấy lại từ cơ sở dữ liệu)
         data: actionHistoryData, // Dữ liệu trả về theo trang và đã sắp xếp
+      });
+    } catch (error) {
+      next(error); // Xử lý lỗi nếu có
+    }
+  }
+
+  async getByCreatedAtRange(req, res, next) {
+    try {
+      const { page, pageSize, startDate, endDate, orderBy } = req.query;
+      console.log(req.query);
+
+      // Chuyển đổi startDate và endDate sang định dạng ngày
+      let startDateTime = dayjs(startDate).startOf('day').toISOString();
+      let endDateTime = dayjs(endDate).endOf('day').toISOString();
+
+      console.log(startDateTime, endDateTime, page, pageSize, orderBy);
+
+      // Xây dựng điều kiện whereCondition
+      const whereCondition = {
+        createdAt: {
+          [Sequelize.Op.between]: [startDateTime, endDateTime], // Lọc dữ liệu từ startDate đến endDate
+        },
+      };
+      console.log(whereCondition);
+
+      const limit = pageSize ? parseInt(pageSize) : 10;
+      const offset = page ? (parseInt(page) - 1) * limit : 0;
+
+      // Xác định tiêu chí sắp xếp
+      let orderCriteria = [];
+      if (orderBy) {
+        const [field, direction] = orderBy.split('_');
+        orderCriteria.push([field, direction]);
+      }
+
+      const ActionHistory = await actionHistoryModel();
+
+      // Lấy dữ liệu theo phân trang (pagination) và sắp xếp trên cơ sở dữ liệu
+      let actionHistory = await ActionHistory.findAll({
+        where: whereCondition,
+        limit: limit,
+        offset: offset,
+        order: orderCriteria,
+      });
+
+      if (actionHistory.length === 0) {
+        return res.send(`There is no data for the time period you selected.`);
+      }
+
+      // Chuyển đổi sang định dạng phù hợp
+      actionHistory = actionHistory.map(data => ({
+        ...data.toJSON(),
+        createdAt: convertDbTimeToAppTime(data.createdAt).toISO(), // Chuyển đổi thời gian của createdAt
+      }));
+
+      const totalCount = await ActionHistory.count({
+        where: whereCondition,
+      });
+
+      return res.send({
+        totalCount,
+        data: actionHistory,
       });
     } catch (error) {
       next(error); // Xử lý lỗi nếu có
@@ -192,56 +187,110 @@ class actionHistoryController {
 
   async create(req, res, next) {
     try {
-      const { deviceName, action } = req.body;
-
-      const generalAction = getGeneralAction(action);
-      // Tạo ActionHistory mới
+      const actions = Array.isArray(req.body) ? req.body : [req.body];
       const ActionHistory = await actionHistoryModel();
-      const newActionHistory = await ActionHistory.create({
-        deviceName,
-        action: generalAction,
-      });
 
-      // Xuất bản tới MQTT
-      const topic = `device/led`; // Chủ đề MQTT
-      const message = action; // Nội dung tin nhắn là hành động
+      const newActionHistories = await Promise.all(
+        actions.map(async actionObj => {
+          const { deviceName, action } = actionObj;
+          const generalAction = getGeneralAction(action);
 
-      client.publish(topic, message, publishError => {
-        if (publishError) {
-          console.error('Error publishing to MQTT:', publishError);
-          res.status(500).json({ error: 'Failed to publish to MQTT' });
-        } else {
-          console.log(`Published to MQTT topic ${topic}: ${message}`);
+          const newActionHistory = await ActionHistory.create({
+            deviceName,
+            action: generalAction,
+          });
 
-          // Đăng ký chủ đề 'device/led/status' để lắng nghe phản hồi
-          client.subscribe('device/led/status', subscribeError => {
-            if (subscribeError) {
-              console.error('Error subscribing to MQTT:', subscribeError);
-              res.status(500).json({ error: 'Failed to subscribe to MQTT' });
+          const topic = `device/led`;
+          const message = action;
+          console.log(message);
+
+          client.publish(topic, message, publishError => {
+            if (publishError) {
+              console.error('Error publishing to MQTT:', publishError);
             } else {
-              console.log('Subscribed to MQTT topic device/led/status');
-
-              // Lắng nghe tin nhắn từ 'device/led/status'
-              client.once('message', (receivedTopic, receivedMessage) => {
-                if (receivedTopic === 'device/led/status') {
-                  const receivedText = receivedMessage.toString();
-                  console.log(`Received MQTT message from ${receivedTopic}:`, receivedText);
-
-                  // Gửi phản hồi HTTP với nội dung từ MQTT
-                  res.status(200).json({
-                    actionHistory: newActionHistory,
-                    mqttMessage: receivedText,
-                  });
-                }
-              });
+              console.log(`Published to MQTT topic ${topic}: ${message}`);
             }
           });
+
+          return newActionHistory;
+        }),
+      );
+
+      const statusTopic = 'device/led/status';
+      client.subscribe(statusTopic, subscribeError => {
+        if (subscribeError) {
+          console.error('Error subscribing to MQTT:', subscribeError);
+          return res.status(500).json({ error: 'Failed to subscribe to MQTT' });
         }
+
+        client.once('message', (receivedTopic, receivedMessage) => {
+          if (receivedTopic === statusTopic) {
+            const receivedText = receivedMessage.toString();
+            console.log(`Received MQTT message from ${receivedTopic}:`, receivedText);
+
+            res.status(200).json({
+              actionHistories: newActionHistories,
+              mqttMessage: receivedText,
+            });
+          }
+        });
       });
     } catch (error) {
       next(error);
     }
   }
+  // async create(req, res, next) {
+  //   try {
+  //     const { deviceName, action } = req.body;
+
+  //     const generalAction = getGeneralAction(action);
+  //     // Tạo ActionHistory mới
+  //     const ActionHistory = await actionHistoryModel();
+  //     const newActionHistory = await ActionHistory.create({
+  //       deviceName,
+  //       action: generalAction,
+  //     });
+
+  //     // Xuất bản tới MQTT
+  //     const topic = `device/led`; // Chủ đề MQTT
+  //     const message = action; // Nội dung tin nhắn là hành động
+
+  //     client.publish(topic, message, publishError => {
+  //       if (publishError) {
+  //         console.error('Error publishing to MQTT:', publishError);
+  //         res.status(500).json({ error: 'Failed to publish to MQTT' });
+  //       } else {
+  //         console.log(`Published to MQTT topic ${topic}: ${message}`);
+
+  //         // Đăng ký chủ đề 'device/led/status' để lắng nghe phản hồi
+  //         client.subscribe('device/led/status', subscribeError => {
+  //           if (subscribeError) {
+  //             console.error('Error subscribing to MQTT:', subscribeError);
+  //             res.status(500).json({ error: 'Failed to subscribe to MQTT' });
+  //           } else {
+  //             console.log('Subscribed to MQTT topic device/led/status');
+
+  //             // Lắng nghe tin nhắn từ 'device/led/status'
+  //             client.once('message', (receivedTopic, receivedMessage) => {
+  //               if (receivedTopic === 'device/led/status') {
+  //                 const receivedText = receivedMessage.toString();
+  //                 console.log(`Received MQTT message from ${receivedTopic}:`, receivedText);
+
+  //                 // Gửi phản hồi HTTP với nội dung từ MQTT
+  //                 res.status(200).json({
+  //                   actionHistory: newActionHistory,
+  //                   mqttMessage: receivedText,
+  //                 });
+  //               }
+  //             });
+  //           }
+  //         });
+  //       }
+  //     });
+  //   } catch (error) {
+  //     next(error);
+  //   }
+  // }
 
   async update(req, res, next) {
     try {
